On rend la newsletter accessible

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a href="#coupes">Nos coupes</a>
                 <a href="#tarifs">Tarifs</a>
                 <a href="#avis">Avis</a>
-                <a href="#newsletter">Newsletters</a>
+                <a href="ff.html">Newsletters</a>
             </nav>
         </div>
     </header>
