--- a/ff.html
+++ b/ff.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <nav>
+        <a href="index.html">Accueil</a>
         <a href="#horaires">Horaires</a>
         <a href="#contact">Contact</a>
         <a href="#coupes">Nos coupes</a>
         <a href="#avis">Avis</a>
-        <a href="#news">News letters</a>
     </nav>
 
     <div class="mainContent">
