--- a/ff.html
+++ b/ff.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Page Coiffure</title>
-    <link rel="stylesheet" href="ff.css">
+    <link rel="stylesheet" href="style/ff.css">
 </head>
 <body>
     <nav>
         <a href="index.html">Accueil</a>
         <a href="#horaires">Horaires</a>
+        <a href="calendrier.html">Prendre rendez-vous</a>
         <a href="#contact">Contact</a>
         <a href="#coupes">Nos coupes</a>
         <a href="#avis">Avis</a>
@@ -16,7 +17,7 @@
 
     <div class="mainContent">
         <div class="imageRodeo">
-            <img src="GAG.png" alt="Image de présentation">
+            <img src="img/GAG.png" alt="Image de présentation">
         </div>
 
         <div class="texteZone">
