--- a/index.html
+++ b/index.html
@@ -3,21 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Salon de Coiffure Western</title>
-    <link rel="stylesheet" href="SalonDeCoiffure2.css">
-    <script defer src="script.js"></script>
+    <link rel="stylesheet" href="style/SalonDeCoiffure2.css">
+    <script defer src="scripts/script.js"></script>
 </head>
 <body>
     <header>
         <div class="nav-container">
             
             <nav>
-                <img src="LogoBarber.png" alt="Logo du salon" class="logo">
+                <img src="img/LogoBarber.png" alt="Logo du salon" class="logo">
                 <a href="#horaires">Horaires</a>
                 <a href="#contact">Contact</a>
+                <a href="calendrier.html">Prendre rendez-vous</a>
                 <a href="#coupes">Nos coupes</a>
                 <a href="#tarifs">Tarifs</a>
                 <a href="#avis">Avis</a>
-                <a href="ff.html">Newsletters</a>
+                <a href="ff.html">Newsletter</a>
             </nav>
         </div>
     </header>
@@ -49,15 +50,6 @@
             </div>
             <img src="https://img.pikbest.com/wp/202345/some-pictures-of-an-antique-barber-shop_9589207.jpg!w700wp" alt="Notre Salon">
         </div>
-
-        <section id="coupes">
-            <h2>Exemples de coupes</h2>
-            <div class="gallery">
-                <img src="exemple1.jpg" alt="Coupe 1">
-                <img src="exemple2.jpg" alt="Coupe 2">
-                <img src="exemple3.jpg" alt="Coupe 3">
-            </div>
-        </section>
 
         <section id="tarifs">
             <h2>Tarifs</h2>
