--- a/index.html
+++ b/index.html
@@ -8,19 +8,16 @@
 </head>
 <body>
     <header>
-        <div class="nav-container">
-            
-            <nav>
-                <img src="img/LogoBarber.png" alt="Logo du salon" class="logo">
-                <a href="#horaires">Horaires</a>
-                <a href="#contact">Contact</a>
-                <a href="calendrier.html">Prendre rendez-vous</a>
-                <a href="#coupes">Nos coupes</a>
-                <a href="#tarifs">Tarifs</a>
-                <a href="#avis">Avis</a>
-                <a href="ff.html">Newsletter</a>
-            </nav>
-        </div>
+        <nav>
+            <!-- <img src="img/LogoBarber.png" alt="Logo du Salon de Coiffure Western" class="logo"> -->
+            <a href="index.html">Accueil</a>
+            <a href="#horaires">Horaires</a>
+            <a href="calendrier.html">Prendre rendez-vous</a>
+            <a href="#contact">Contact</a>
+            <a href="#coupes">Nos coupes</a>
+            <a href="#avis">Avis</a>
+            <a href="ff.html">Newsletter</a>
+        </nav>
     </header>
 
     <main>
