--- a/ff.html
+++ b/ff.html
@@ -13,12 +13,15 @@
         <a href="#contact">Contact</a>
         <a href="#coupes">Nos coupes</a>
         <a href="#avis">Avis</a>
+        <a href="ff.html">Newsletter</a>
     </nav>
 
+    <div class="imageRodeo">
+        <img src="img/GAG.png" alt="Image de présentation">
+    </div>
+
     <div class="mainContent">
-        <div class="imageRodeo">
-            <img src="img/GAG.png" alt="Image de présentation">
-        </div>
+        
 
         <div class="texteZone">
             <div class="blocTexte">
