--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav>
             <!-- <img src="img/LogoBarber.png" alt="Logo du Salon de Coiffure Western" class="logo"> -->
             <a href="index.html">Accueil</a>
-            <a href="#horaires">Horaires</a>
+            <!-- <a href="#horaires">Horaires</a> -->
             <a href="calendrier.html">Prendre rendez-vous</a>
             <a href="#contact">Contact</a>
             <a href="#coupes">Nos coupes</a>
