Quasiment terminé, manque plus que le PHP et SQL

--- a/calendrier.html
+++ b/calendrier.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Prise de Rendez-vous Dynamique</title>
+  <title>Prendre rendez-vous</title>
   <link rel="stylesheet" href="style/calendrier.css">
 </head>
 
@@ -10,7 +10,7 @@
     <nav>
         <a href="index.html">Accueil</a>
         <a href="#contact">Contact</a>
-        <a href="#coupes">Nos coupes</a>
+        <a href="coupes.html">Nos coupes</a>
         <a href="ff.html">Newsletter</a>
     </nav>
 </header>
