--- a/ff.html
+++ b/ff.html
@@ -9,7 +9,7 @@
     <nav>
         <a href="index.html">Accueil</a>
         <a href="calendrier.html">Prendre rendez-vous</a>
-        <a href="#coupes">Nos coupes</a>
+        <a href="coupes.html">Nos coupes</a>
         <a href="ff.html">Newsletter</a>
     </nav>
 
