--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <!-- <img src="img/LogoBarber.png" alt="Logo du Salon de Coiffure Western" class="logo"> -->
             <a href="calendrier.html">Prendre rendez-vous</a>
             <a href="#contact">Contact</a>
-            <a href="#coupes">Nos coupes</a>
+            <a href="coupes.html">Nos coupes</a>
             <a href="#avis">Avis</a>
             <a href="ff.html">Newsletter</a>
         </nav>
