Dernier commit majeur

--- a/calendrier.html
+++ b/calendrier.html
@@ -31,6 +31,9 @@
     <button type="button" id="cancelSlotBtn">Annuler la sélection</button>
     <button type="submit">S'inscrire</button>
   </form>
+  <!-- Zone de message confirmation -->
+  <div id="confirmationMessage" style="display:none; margin-top: 1em; padding: 10px; border-radius: 5px;"></div>
+
 </main>
 
 <script src="scripts/calendrier.js" defer></script>
