--- a/calendrier.html
+++ b/calendrier.html
@@ -19,7 +19,8 @@
   <h2>Réservation de créneaux</h2>
 
   <form id="registrationForm" method="POST" action="sauv_rdv.php">
-    <label>Nom, Prénom : <input type="text" name="name" required /></label><br />
+    <label>Nom :<input type="text" name="name" required /></label><br />
+    <label>Prénom :<input type="text" name="firstname" required /></label><br />
     <label>Email : <input type="email" name="email" required style="width: 250px" /></label><br /><br />
 
     <strong>Sélectionnez un créneau horaire :</strong>
